docs/周立功/zlgcan_x86/zlgcan.h

#define ZCAN_USBCAN_2E_U          21
#define ZCAN_USBCAN_4E_U          31
#define ZCAN_USBCAN_8E_U          34
#define ZCAN_PCIE_CANFD_100U      38
#define ZCAN_PCIE_CANFD_200U      39
#define ZCAN_PCIE_CANFD_400U      40
#define ZCAN_USBCANFD_200U        41
#define ZCAN_USBCANFD_100U        42
#define ZCAN_USBCANFD_MINI        43
#define ZCAN_CANFDNET_200U_TCP    48
#define ZCAN_CANFDNET_200U_UDP    49
#define ZCAN_USBCANFD_800U        59
#define ZCAN_USBCANFD_400U        76
#define ZCAN_PCIE_CANFD_800U      82
#define ZCAN_PCIE_CANFD_1200U     83
#define ZCAN_ERROR_CAN_OVERFLOW        0x0001
#define ZCAN_ERROR_CAN_ERRALARM        0x0002
#define ZCAN_ERROR_CAN_PASSIVE         0x0004
#define ZCAN_ERROR_CAN_LOSE            0x0008
#define ZCAN_ERROR_CAN_BUSERR          0x0010
#define ZCAN_ERROR_CAN_BUSOFF          0x0020
#define ZCAN_ERROR_CAN_BUFFER_OVERFLOW 0x0040
#define ZCAN_ERROR_DEVICEOPENED   0x0100
#define ZCAN_ERROR_DEVICEOPEN     0x0200
#define ZCAN_ERROR_DEVICENOTOPEN  0x0400
#define ZCAN_ERROR_BUFFEROVERFLOW 0x0800
#define ZCAN_ERROR_DEVICENOTEXIST 0x1000
#define ZCAN_ERROR_LOADKERNELDLL  0x2000
#define ZCAN_ERROR_CMDFAILED      0x4000
#define ZCAN_ERROR_BUFFERCREATE   0x8000
#define STATUS_ERR              0
#define STATUS_OK               1
#define STATUS_ONLINE           2
#define STATUS_OFFLINE          3
#define STATUS_UNSUPPORTED      4
#define STATUS_BUFFER_TOO_SMALL 5
#define TYPE_CAN      0
#define TYPE_CANFD    1
#define TYPE_ALL_DATA 2
// 动态配置 持久配置 END

typedef void *DEVICE_HANDLE;
typedef void *CHANNEL_HANDLE;
typedef struct tagZCAN_DEVICE_INFO {
    USHORT hw_Version;  // 硬件版本
    USHORT fw_Version;  // 固件版本
    USHORT dr_Version;  // 驱动版本
    USHORT in_Version;  // 动态库版本
    USHORT irq_Num;
    BYTE   can_Num;
    UCHAR  str_Serial_Num[20];
    UCHAR  str_hw_Type[40];
    USHORT reserved[4];
} ZCAN_DEVICE_INFO;
typedef struct tagZCAN_CHANNEL_INIT_CONFIG {
    UINT can_type;  // type:TYPE_CAN
                    // TYPE_CANFD（can_type的设备类型只取决于产品硬件的类型，CANFD系列的产品必须设置为1，表示CANFD设备）
    union {
        struct {
            UINT acc_code;
            UINT acc_mask;
            UINT reserved;
            BYTE filter;
            BYTE timing0;
            BYTE timing1;
            BYTE mode;
        } can;
        struct {
            UINT   acc_code;
            UINT   acc_mask;
            UINT   abit_timing;
            UINT   dbit_timing;
            UINT   brp;
            BYTE   filter;
            BYTE   mode;
            USHORT pad;
            UINT   reserved;
        } canfd;
    };
} ZCAN_CHANNEL_INIT_CONFIG;
typedef struct tagZCAN_CHANNEL_ERR_INFO {
    UINT error_code;
    BYTE passive_ErrData[3];
    BYTE arLost_ErrData;
} ZCAN_CHANNEL_ERR_INFO;
typedef struct tagZCAN_CHANNEL_STATUS {
    BYTE errInterrupt;
    BYTE regMode;
    BYTE regStatus;
    BYTE regALCapture;
    BYTE regECCapture;
    BYTE regEWLimit;
    BYTE regRECounter;
    BYTE regTECounter;
    UINT Reserved;
} ZCAN_CHANNEL_STATUS;
typedef struct tagZCAN_Transmit_Data {
    can_frame frame;
    UINT      transmit_type;
} ZCAN_Transmit_Data;
typedef struct tagZCAN_Receive_Data {
    can_frame frame;
    UINT64    timestamp;  // us
} ZCAN_Receive_Data;
typedef struct tagZCAN_TransmitFD_Data {
    canfd_frame frame;
    UINT        transmit_type;
} ZCAN_TransmitFD_Data;
typedef struct tagZCAN_ReceiveFD_Data {
    canfd_frame frame;
    UINT64      timestamp;  // us
} ZCAN_ReceiveFD_Data;
// Bus usage
typedef struct tagBusUsage {
    UINT64 nTimeStampBegin;  // 测量起始时间戳，单位us
    UINT64 nTimeStampEnd;    // 测量结束时间戳，单位us
    BYTE   nChnl;            // 通道
    BYTE   nReserved;        // 保留
    USHORT
    nBusUsage;         // 总线利用率(%)，总线利用率*100展示。取值0~10000，如8050表示80.50%
    UINT nFrameCount;  // 帧数量
} BusUsage;
// CAN/CANFD数据
typedef struct tagZCANCANFDData {
    UINT64
    timeStamp;  // 时间戳，数据接收时单位微秒(us)，队列延时发送时，数据单位取决于flag.unionVal.txDelay
    union {
        struct {
            UINT frameType : 2;     // 帧类型，0:CAN帧，1:CANFD帧
            UINT txDelay   : 2;     // 队列发送延时，发送有效.
                                    // 0:无发送延时，1:发送延时单位ms，2:发送延时单位100us.
                                    // 启用队列发送延时，延时时间存放在timeStamp字段
            UINT transmitType : 4;  // 发送类型，发送有效.
                                    // 0:正常发送，1:单次发送，2:自发自收，3:单次自发自收.
                                    // 所有设备支持正常发送，其他类型请参考具体使用手册
            UINT
                txEchoRequest : 1;  // 发送回显请求，发送有效.
                                    // 支持发送回显的设备，发送数据时将此位置1，设备可以通过接收接口将发送出去的数据帧返回，接收到的发送数据使用txEchoed位标记
            UINT txEchoed : 1;      // 报文是否是回显报文，接收有效.
                                    // 0:正常总线接收报文，1:本设备发送回显报文.
            UINT reserved : 22;     // 保留
        } unionVal;
        UINT rawVal;           // 帧标志位raw数据
    } flag;                    // CAN/CANFD帧标志位
    BYTE        extraData[4];  // 额外数据,暂未使用
    canfd_frame frame;         // CAN/CANFD帧ID+数据
} ZCANCANFDData;
// 错误数据
typedef struct tagZCANErrorData {
    UINT64 timeStamp;   // 时间戳，单位微秒(us)
    BYTE   errType;     // 错误类型，参考eZCANErrorDEF中 总线错误类型 部分值定义
    BYTE   errSubType;  // 错误子类型，参考eZCANErrorDEF中 总线错误子类型 部分值定义
    BYTE   nodeState;   // 节点状态，参考eZCANErrorDEF中 节点状态 部分值定义
    BYTE   rxErrCount;  // 接收错误计数
    BYTE   txErrCount;  // 发送错误计数
    BYTE   errData;     // 错误数据，和当前错误类型以及错误子类型定义的具体错误相关,
                        // 具体请参考使用手册
    BYTE reserved[2];   // 保留
} ZCANErrorData;
// GPS数据
typedef struct tagZCANGPSData {
    struct {
        USHORT year;    // 年
        USHORT mon;     // 月
        USHORT day;     // 日
        USHORT hour;    // 时
        USHORT min;     // 分
        USHORT sec;     // 秒
        USHORT milsec;  // 毫秒
    } time;             // UTC时间
    union {
        struct {
            USHORT timeValid        : 1;   // 时间数据是否有效
            USHORT latlongValid     : 1;   // 经纬度数据是否有效
            USHORT altitudeValid    : 1;   // 海拔数据是否有效
            USHORT speedValid       : 1;   // 速度数据是否有效
            USHORT courseAngleValid : 1;   // 航向角数据是否有效
            USHORT reserved         : 13;  // 保留
        } unionVal;
        USHORT rawVal;
    } flag;              // 标志信息
    double latitude;     // 纬度 正数表示北纬，负数表示南纬
    double longitude;    // 经度 正数表示东经，负数表示西经
    double altitude;     // 海拔 单位: 米
    double speed;        // 速度 单位: km/h
    double courseAngle;  // 航向角
} ZCANGPSData;
// LIN数据
typedef struct tagZCANLINData {
    union {
        struct {
            BYTE ID     : 6;  // 帧ID
            BYTE Parity : 2;  // 帧ID校验
        } unionVal;
        BYTE rawVal;  // 受保护的ID原始值
    } PID;            // 受保护的ID
    struct {
        UINT64 timeStamp;     // 时间戳，单位微秒(us)
        BYTE   dataLen;       // 数据长度
        BYTE   dir;           // 传输方向，0-接收 1-发送
        BYTE   chkSum;        // 数据校验，部分设备不支持校验数据的获取
        BYTE   reserved[13];  // 保留
        BYTE   data[8];       // 数据
    } RxData;                 // 仅接收数据时有效
    BYTE reserved[7];         // 保留
} ZCANLINData;
// 错误数据
typedef struct tagZCANLINErrData {
    UINT64 timeStamp;  // 时间戳，单位微秒(us)
    union {
        struct {
            BYTE ID     : 6;  // 帧ID
            BYTE Parity : 2;  // 帧ID校验
        } unionVal;
        BYTE rawVal;  // 受保护的ID原始值
    } PID;            // 受保护的ID
    BYTE dataLen;
    BYTE data[8];
    union {
        struct {
            USHORT errStage  : 4;  // 错误阶段
            USHORT errReason : 4;  // 错误原因
            USHORT reserved  : 8;  // 保留
        };
        USHORT unionErrData;
    } errData;
    BYTE dir;           // 传输方向
    BYTE chkSum;        // 数据校验，部分设备不支持校验数据的获取
    BYTE reserved[10];  // 保留
} ZCANLINErrData;
typedef struct tagZCANLINEventData {
    UINT64              timeStamp;  // 时间戳，单位微秒(us)
    ZCAN_LIN_EVENT_TYPE type;
    union {
        struct {
            BYTE prior_sched_idx;       // 上一个调度表索引
            BYTE prior_sched_item_idx;  // 上一个调度表项索引
            BYTE next_sched_idx;        // 下一个调度表索引
            BYTE next_sched_item_idx;   // 下一个调度表项索引
            BYTE first_after_wake_up;   // 是否为唤醒后首次切换
            BYTE switch_sched_res[2];
        } switch_sched;
        BYTE reserved[7];
    };
} ZCANLINEventData;
// LIN扩展数据
typedef struct tagZCANLINExData {
    union {
        struct {
            BYTE ID     : 6;  // 帧ID
            BYTE Parity : 2;  // 帧ID校验
        } unionVal;
        BYTE rawVal;   // 受保护的ID原始值
    } PID;             // 受保护的ID
    BYTE reserved[7];  // 保留
    struct {
        UINT64 timeStamp;    // 时间戳，单位微秒(us)
        BYTE   dataLen;      // 数据长度
        BYTE   dir;          // 传输方向，0-接收 1-发送
        BYTE   chkSum;       // 数据校验，部分设备不支持校验数据的获取
        BYTE   reserved[5];  // 保留
        BYTE   data[64];     // 数据
    } RxData;                // 仅接收数据时有效
} ZCANLINExData;
// 合并接收数据数据结构，支持CAN/CANFD/LIN/GPS/错误等不同类型数据
typedef struct tagZCANDataObj {
    BYTE dataType;  // 数据类型，参考eZCANDataDEF中 数据类型 部分定义
    BYTE chnl;      // 数据通道
    union {
        struct {
            USHORT reserved : 16;  // 保留
        } unionVal;
        USHORT rawVal;
    } flag;             // 标志信息，暂未使用
    BYTE extraData[4];  // 额外数据，暂未使用
    union {
        ZCANCANFDData    zcanCANFDData;     // CAN/CANFD数据
        ZCANErrorData    zcanErrData;       // 错误数据
        ZCANGPSData      zcanGPSData;       // GPS数据
        ZCANLINData      zcanLINData;       // LIN数据
        ZCANLINErrData   zcanLINErrData;    // LIN错误数据
        ZCANLINExData    zcanLINExData;     // LIN扩展数据
        ZCANLINEventData zcanLINEventData;  // LIN事件数据
        BusUsage         busUsage;          // BusUsage数据
        BYTE             raw[92];           // RAW数据
    } data;                                 // 实际数据，联合体，有效成员根据 dataType 字段而定
} ZCANDataObj;
#define INVALID_DEVICE_HANDLE 0
DEVICE_HANDLE FUNC_CALL ZCAN_OpenDevice(UINT device_type, UINT device_index, UINT reserved);
// 基于自定义序列号打开
DEVICE_HANDLE FUNC_CALL ZCAN_OpenDeviceByName(UINT DeviceType, const char *name);
UINT FUNC_CALL          ZCAN_CloseDevice(DEVICE_HANDLE device_handle);
UINT FUNC_CALL          ZCAN_GetDeviceInf(DEVICE_HANDLE device_handle, ZCAN_DEVICE_INFO *pInfo);
UINT FUNC_CALL ZCAN_IsDeviceOnLine(DEVICE_HANDLE device_handle);
#define INVALID_CHANNEL_HANDLE 0
CHANNEL_HANDLE FUNC_CALL ZCAN_InitCAN(DEVICE_HANDLE device_handle, UINT can_index,
                                      ZCAN_CHANNEL_INIT_CONFIG *pInitConfig);
UINT FUNC_CALL           ZCAN_StartCAN(CHANNEL_HANDLE channel_handle);
UINT FUNC_CALL           ZCAN_ResetCAN(CHANNEL_HANDLE channel_handle);
UINT FUNC_CALL           ZCAN_ClearBuffer(CHANNEL_HANDLE channel_handle);
UINT FUNC_CALL           ZCAN_ReadChannelErrInfo(CHANNEL_HANDLE channel_handle, ZCAN_CHANNEL_ERR_INFO *pErrInfo);
UINT FUNC_CALL           ZCAN_ReadChannelStatus(CHANNEL_HANDLE channel_handle, ZCAN_CHANNEL_STATUS *pCANStatus);
UINT FUNC_CALL           ZCAN_GetReceiveNum(CHANNEL_HANDLE channel_handle,
                                            BYTE           type);  // type:TYPE_CAN, TYPE_CANFD, TYPE_ALL_DATA
UINT FUNC_CALL           ZCAN_Transmit(CHANNEL_HANDLE channel_handle, ZCAN_Transmit_Data *pTransmit, UINT len);
UINT FUNC_CALL           ZCAN_Receive(CHANNEL_HANDLE channel_handle, ZCAN_Receive_Data *pReceive, UINT len,
                                      int wait_time DEF(-1));
UINT FUNC_CALL           ZCAN_TransmitFD(CHANNEL_HANDLE channel_handle, ZCAN_TransmitFD_Data *pTransmit, UINT len);
UINT FUNC_CALL           ZCAN_ReceiveFD(CHANNEL_HANDLE channel_handle, ZCAN_ReceiveFD_Data *pReceive, UINT len,
                                        int wait_time DEF(-1));
UINT FUNC_CALL ZCAN_TransmitData(DEVICE_HANDLE device_handle, ZCANDataObj *pTransmit, UINT len);
UINT FUNC_CALL ZCAN_ReceiveData(DEVICE_HANDLE device_handle, ZCANDataObj *pReceive, UINT len, int wait_time DEF(-1));
UINT FUNC_CALL ZCAN_SetValue(DEVICE_HANDLE device_handle, const char *path, const void *value);
const void *FUNC_CALL ZCAN_GetValue(DEVICE_HANDLE device_handle, const char *path);